src/objects/AMA_Agreement_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Fee_Rule_Proration_Rules_Applied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proration Rules Applied?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fee_Rule_Vendor_has_Licence__c</fullName>
        <label>Vendor has Licence?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Rule_Year__c</fullName>
        <label>Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_End_Year__c</fullName>
        <formula>TEXT(YEAR(Agreement_End_Date__c))</formula>
        <label>Final End Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Firewall_port_filtering_technologies__c</fullName>
        <inlineHelpText>Data security procedures: Firewall and/or port filtering technologies (describe)?</inlineHelpText>
        <label>Firewall port filtering technologies</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Foreign_Storage_Billed_in_Advance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Foreign Storage Billed in Advance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Foreign_Storage_Current_Year_Fees__c</fullName>
        <label>Foreign Storage Current Year Fees</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Foreign_Storage_Current_Year__c</fullName>
        <formula>TEXT(YEAR( TPA_Request__r.Data_Access_Start_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Foreign Storage Current Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Foreign_Storage_Fee_Reduced__c</fullName>
        <label>Foreign Storage Fee Reduced</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Foreign_Storage_Next_Year_Fees__c</fullName>
        <label>Foreign Storage Next Year Fees</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Foreign_Storage_Next_Year__c</fullName>
        <formula>IF(YEAR( Agreement_End_Date__c) = YEAR( TPA_Request__r.Data_Access_Start_Date__c ) , Current_Year__c , TEXT(YEAR( TPA_Request__r.Data_Access_Start_Date__c ) + 1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Foreign Storage Next Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FrequencyOfDeliveryToSP_Other__c</fullName>
        <label>Description if frequency is &apos;Other&apos;</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FrequencyOfDeliveryToServiceProvider__c</fullName>
        <label>AMA frequency of delivery</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One-time</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Once per each 90-day project</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Full_partial_credit__c</fullName>
        <description>Created under ER-3888</description>
        <label>Full/partial credit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HTTPS_VPN_Other__c</fullName>
        <inlineHelpText>How will the data be accessed?</inlineHelpText>
        <label>HTTPS? VPN? Other?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_Response_Data_Collected_For_Template__c</fullName>
        <label>How Response Data Collected For Template</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_will_the_data_be_accessed__c</fullName>
        <inlineHelpText>How will the data be accessed? (Documentation should include a connection diagram showing how the data will be accessed.)</inlineHelpText>
        <label>How will the data be accessed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_vendor_cancellation_reason_is_Other__c</fullName>
        <label>If vendor cancellation reason is &apos;Other&apos;</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_in_Perpetual_AMA_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include in Perpetual AMA Agreement:</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_in_Perpetual_AMA_Foreign_License__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include in Perpetual AMA Foreign License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Termination_Date__c</fullName>
        <label>Initial Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Contact_Email__c</fullName>
        <description>Created under ER-11623</description>
        <label>Invoice Contact Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Contact__c</fullName>
        <description>Created under ER-11623</description>
        <label>Invoice Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Foreign_Storage_Contact_Email__c</fullName>
        <label>Invoice Foreign Storage Contact Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Foreign_Storage_Contact__c</fullName>
        <label>Invoice Foreign Storage Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_AMA_License_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is AMA License Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Foreign_License_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Foreign License Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Next_Year_GrtThan_Current_Year__c</fullName>
        <formula>IF(Next_Year__c = Current_Year__c , false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Next Year GrtThan Current Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Off_Access_Amendment_Req_WithNALoc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Offshore Access Amendment Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Offshore_Access_Amendment_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Offshore Access Amendment Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Offshore_Access_Amendment_to_FL_Req__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Offshore Access Amendment to FL Req?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Offshore_Consent_Form_Req__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Offshore Consent Form Req?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Prorated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Prorated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_area_secure__c</fullName>
        <inlineHelpText>Physical security procedures: Is area secure?</inlineHelpText>
        <label>Is area secure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_AMA_Reminder_Mail_Sent__c</fullName>
        <description>we need to send every 3rd day a reminder mail to vendor if cancelation status is Awaiting AMA Response to Vendor Cancelation Request.</description>
        <label>Last AMA Mail Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_AMA_offshore_reminder_mail_sent__c</fullName>
        <description>Created under ER-3947</description>
        <label>Last AMA offshore reminder mail sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Vendor_Offshore_Reminder_Mail_Sent__c</fullName>
        <description>FOR OFFSHORE PROCESS</description>
        <label>Last Vendor Offshore Reminder Mail Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Vendor_Reminder_Mail_Sent__c</fullName>
        <description>we need to send daily a reminder mail to vendor if cancelation status is Awaiting Vendor Cancelation Acknowledgement.</description>
        <label>Last Vendor Mail Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <description>ESPSFDCTPA-50 Unique id used for migrating AMA Agreement Detail records from external systems (e.g. during acquisition loads)</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique id used for migrating AMA Agreement Detail records from external systems (e.g. during acquisition loads)</inlineHelpText>
        <label>Legacy Id</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>License_Term__c</fullName>
        <label>License Term</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Half Year</fullName>
                </value>
                <value>
                    <fullName>Quarter Year</fullName>
                </value>
                <value>
                    <fullName>Full</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Fee_Reached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Max Fee Reached?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Year_Fees__c</fullName>
        <label>Next Year Fees</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Year_Invoice__c</fullName>
        <label>Next Year Invoice</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Year__c</fullName>
        <formula>IF(YEAR( Agreement_End_Date__c) = YEAR( TPA_Request__r.Data_Access_Start_Date__c ) , Current_Year__c , TEXT(YEAR( TPA_Request__r.Data_Access_Start_Date__c ) + 1))</formula>
        <label>Next Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Scenarios_Satisfied__c</fullName>
        <label>Number Of Specific Scenarios Satisfied</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_computers_used__c</fullName>
        <inlineHelpText>Number of computers used to access this data and total number of computers on offshore entity network?</inlineHelpText>
        <label>Number of computers used</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Off_Access_Legal_Entity_City__c</fullName>
        <label>Ex-US Legal Entity City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Off_Access_Legal_Entity_Country__c</fullName>
        <label>Ex-US Legal Entity Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>Cameroon</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Cayman Islands</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Congo</fullName>
                </value>
                <value>
                    <fullName>Costa Rica</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Cyprus</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Off_Access_Legal_Entity_State__c</fullName>
        <label>Ex-US Legal Entity State/Province</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
                <value>
                    <fullName>New Jersey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Off_Access_Legal_Entity_Street__c</fullName>
        <label>Ex-US Legal Entity Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Off_Access_Legal_Entity_Zip__c</fullName>
        <label>Ex-US Legal Entity Zip/Post Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Off_Storage_Legal_Entity_City__c</fullName>
        <label>Ex-US Legal Entity City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Off_Storage_Legal_Entity_Country__c</fullName>
        <label>Ex-US Legal Entity Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>Cameroon</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Cayman Islands</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Congo</fullName>
                </value>
                <value>
                    <fullName>Costa Rica</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Cyprus</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Off_Storage_Legal_Entity_State__c</fullName>
        <label>Ex-US Legal Entity State/Province</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
                <value>
                    <fullName>New Jersey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Off_Storage_Legal_Entity_Street__c</fullName>
        <label>Ex-US Legal Entity Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Off_Storage_Legal_Entity_Zip__c</fullName>
        <label>Ex-US Legal Entity Zip/Post Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offshore_Consent_Form_Req_in_Foreign_Lic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Offshore Consent Form Req in Foreign Lic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Offshore_Request__c</fullName>
        <formula>INCLUDES(AMA_Manual_Trigger_Reasons__c, &apos;Vendor requires offshore approval&apos;)</formula>
        <label>Offshore Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Offshore_Storage_Legal_Entity_Address__c</fullName>
        <formula>if(LEN(Ex_US_Legal_Entity_Name_Offshore_Storage__c)&gt;0, Ex_US_Legal_Entity_Name_Offshore_Storage__c&amp; &quot;, &quot; , &quot;&quot; ) &amp;
if(LEN(Off_Storage_Legal_Entity_Street__c)&gt;0, Off_Storage_Legal_Entity_Street__c&amp; &quot;, &quot; , &quot;&quot; ) &amp;
if(LEN(Off_Storage_Legal_Entity_City__c)&gt;0, Off_Storage_Legal_Entity_City__c&amp; &quot;, &quot; , &quot;&quot; )&amp;
IF(OR(ISPICKVAL(Off_Storage_Legal_Entity_State__c,&quot;--None--&quot;),ISPICKVAL(Off_Storage_Legal_Entity_State__c,&quot;&quot;)),
  &quot;&quot;, TEXT(Off_Storage_Legal_Entity_State__c)&amp; &quot;, &quot;)&amp;
if(LEN(Off_Storage_Legal_Entity_Zip__c)&gt;0, Off_Storage_Legal_Entity_Zip__c&amp; &quot;, &quot;,&quot;&quot;) &amp;  
IF(OR(ISPICKVAL(Off_Storage_Legal_Entity_Country__c,&quot;--None--&quot;),ISPICKVAL(Off_Storage_Legal_Entity_Country__c,&quot;&quot;)),
  &quot;&quot;, TEXT(Off_Storage_Legal_Entity_Country__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offshore Storage Legal Entity Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Technology_for_Remote_Access__c</fullName>
        <label>Other Technology for Remote Access</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <inlineHelpText>Data security procedures: Other?</inlineHelpText>
        <label>Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_technology_to_access_AMA_PPD__c</fullName>
        <description>Technology to access AMA-PPD provided by vendor (Created under ER-3947)</description>
        <inlineHelpText>Technology to access AMA-PPD if other is selected by Vendor</inlineHelpText>
        <label>Other technology to access AMA-PPD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portable_storage_devices_allowed__c</fullName>
        <inlineHelpText>Are portable storage devices allowed in the work environment?</inlineHelpText>
        <label>Portable storage devices allowed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_order_number__c</fullName>
        <description>Purchase order number(used for billing)</description>
        <label>Purchase order number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Questions_for_Vendor_Response__c</fullName>
        <description>Created under ER-3947</description>
        <inlineHelpText>Additional Questions from AMA when vendor select other technology in Offshore consent form</inlineHelpText>
        <label>Questions for Vendor Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>REVISED_AMA_Use_and_or_Frequency__c</fullName>
        <label>REVISED AMA Use and/or Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reasons_For_Not_Approval__c</fullName>
        <description>When AMA does not approve and provide reasons</description>
        <label>Reasons For Not Approval</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Renewal_Cancellation_Vendor_Link_Date__c</fullName>
        <label>Renewal Cancellation Vendor Link Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Process_Initiated__c</fullName>
        <description>Whenever TP-US initiate the request for cancellation</description>
        <label>Request Process Initiated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_for_Cancelation__c</fullName>
        <formula>IF(AND( ISPICKVAL(TPA_Request__r.AMA_USPrescriberData__c , &apos;Yes&apos;), OR(ISPICKVAL(TPA_Request__r.Request_Status__c , &apos;In Effect&apos;),ISPICKVAL(TPA_Request__r.Request_Status__c , &apos;Expired&apos;)), !ISBLANK(TPA_Request__r.Service_Provider_Address__c),  !ISBLANK(TPA_Request__r.Vendor_Contact_e_mail__c),  OR(ISPICKVAL(Contract_Type__c , &apos;Service Bureau II&apos;),ISPICKVAL(Contract_Type__c , &apos;Contract Sales Force&apos;)) ), HYPERLINK(&quot;/apex/VFP_TPA_AMA_Cancellation_Template?id=&quot;&amp;Id&amp;&quot;&amp;reqId=&quot;&amp;TPA_Request__c&amp;&quot;&amp;viewMode=cancelation&amp;type=TPSubmit&quot;, IMAGE(&quot;/resource/RequestforCancelation&quot;, &quot;Send Request for Cancelation&quot;), &quot;_self&quot;),NULL)</formula>
        <label>Request for Cancelation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_Additional_Info_By_AMA__c</fullName>
        <description>When AMA submit Cancelation response with Additional Information is required and provide that info</description>
        <label>Required Additional Info By AMA</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resend_AMA_Fee_Notification__c</fullName>
        <formula>IF( 
AND 
(
ISPICKVAL(TPA_Request__r.AMA_USPrescriberData__c , &apos;Yes&apos;), 
!ISBLANK(TPA_Request__r.Service_Provider_Address__c), 
!ISBLANK(TPA_Request__r.Vendor_Contact_e_mail__c), 
OR(ISPICKVAL(Vendor_AMA_Fee_Response__c , &apos;declined&apos;), ISPICKVAL(Vendor_AMA_Fee_Response__c , &apos;acknowledged&apos;)),
OR(ISPICKVAL(TPA_Request__r.Request_Status__c , &apos;Pending - Vendor Declined AMA Fees&apos;), 
AND(ISPICKVAL(TPA_Request__r.Request_Status__c , &apos;In Review By IQVIA&apos;), OR(Current_Year_Fees__c &gt; 0, Next_Year_Fees__c &gt; 0 )) 
)

) 
, HYPERLINK(&quot;/apex/VFP_TPA_AMA_Vendor_Response?id=&quot;&amp;Id&amp;&quot;&amp;reqId=&quot;&amp;TPA_Request__c&amp;&quot;&amp;vendorResponse=resendAMAFeeNotification&quot;, IMAGE(&quot;/resource/TPA_AMA_ResendFeeNotification&quot;, &quot;Resend the AMA Fee Notification&quot;), &quot;_self&quot;), 
NULL 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resend AMA Fee Notification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resend_AMA_Foreign_Storage_Fee_Noti__c</fullName>
        <formula>IF(
AND
(
ISPICKVAL(TPA_Request__r.AMA_USPrescriberData__c , &apos;Yes&apos;),
!ISBLANK(TPA_Request__r.Service_Provider_Address__c),
!ISBLANK(TPA_Request__r.Vendor_Contact_e_mail__c),
ISPICKVAL(TPA_Request__r.Request_Status__c , &apos;Pending - Vendor Declined AMA Fees&apos;)
)
, HYPERLINK(&quot;/apex/VFP_TPA_AMA_Vendor_Response?id=&quot;&amp;Id&amp;&quot;&amp;reqId=&quot;&amp;TPA_Request__c&amp;&quot;&amp;vendorResponse=resendAMAFeeNotification&quot;, IMAGE(&quot;/resource/TPA_AMA_ResendFeeNotification&quot;, &quot;Resend the AMA Fee Notification&quot;), &quot;_self&quot;),
NULL
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resend AMA Foreign Storage Fee Noti</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resend_to_AMA__c</fullName>
        <formula>IF( 
AND 
( 
ISPICKVAL(TPA_Request__r.AMA_USPrescriberData__c , &apos;Yes&apos;), 
OR(ISPICKVAL(TPA_Request__r.Request_Status__c , &apos;In Effect&apos;),ISPICKVAL(TPA_Request__r.Request_Status__c , &apos;Expired&apos;)), 
!ISBLANK(TPA_Request__r.Service_Provider_Address__c), 
!ISBLANK(TPA_Request__r.Vendor_Contact_e_mail__c), 
OR(ISPICKVAL(Contract_Type__c , &apos;Service Bureau II&apos;),ISPICKVAL(Contract_Type__c , &apos;Contract Sales Force&apos;)),
OR(ISPICKVAL(Status_of_Cancelation_Request__c , &apos;AMA responded with additional questions&apos;),ISPICKVAL(Status_of_Cancelation_Request__c , &apos;AMA has approved cancelation and credit&apos;),ISPICKVAL(Status_of_Cancelation_Request__c , &apos;AMA has approved cancelation but credit not approved&apos;), ISPICKVAL(Status_of_Cancelation_Request__c , &apos;AMA did not approve&apos;))
) 
, HYPERLINK(&quot;/apex/VFP_TPA_AMA_Cancellation_Template?id=&quot;&amp;Id&amp;&quot;&amp;reqId=&quot;&amp;TPA_Request__c&amp;&quot;&amp;viewMode=cancelation&amp;type=ResendToAMA&quot;, IMAGE(&quot;/resource/ResendToAMA&quot;, &quot;Resend to AMA&quot;), &quot;_self&quot;), 
NULL 
)</formula>
        <label>Resend to AMA</label>
        <type>Text</type>
    </fields>
</CustomObject>